%% This file was produced by codegen/src/Packet.Sdl.CodeGen from /home/tf/src/ax25sdl/spec-sdl/v2.2-errata/data-link/yaml/awaiting_connection.sdl.yaml
%% Do not edit by hand. Run `dotnet run --project codegen/src/Packet.Sdl.CodeGen` to regenerate.
%%
%% Source: ax.25.2.2.4_Oct_25, figure figc4.2
%% Coverage: complete
%%
%% Important: this rendering is approximate and intentionally
%% looks nothing like the original SDL figure. It is a machine-
%% generated view of the transitions in the .sdl.yaml — useful
%% for spotting transcription bugs (missing transitions, wrong
%% destination state) but NOT a substitute for reading the spec
%% figure itself. See docs/sdl-primer.md.

stateDiagram-v2
    direction LR

    classDef focal fill:#fff5b1,stroke:#b08800;
    class AwaitingConnection focal
    AwaitingConnection --> AwaitingConnection: t01_dl_disconnect_request<br/>on: DL_DISCONNECT_request
    AwaitingConnection --> AwaitingConnection: t02_disc_received<br/>on: DISC_received<br/>/ · F := P<br/>/ ↓ DM
    AwaitingConnection --> Disconnected: t03_dm_received_yes<br/>on: DM_received<br/>[F_eq_1]<br/>/ · discard_frame_queue<br/>/ ↑ DL-DISCONNECT indication<br/>/ · Stop T1
    AwaitingConnection --> AwaitingConnection: t03_dm_received_no<br/>on: DM_received<br/>[not F_eq_1]
    AwaitingConnection --> AwaitingConnection: t04_ua_received_no<br/>on: UA_received<br/>[not F_eq_1]<br/>/ ↑ DL-ERROR indication (D)
    AwaitingConnection --> Connected: t04_ua_received_yes_yes<br/>on: UA_received<br/>[F_eq_1 and layer_3_initiated]<br/>/ ↑ DL-CONNECT Confirm<br/>/ · Stop T1<br/>/ · Start T3<br/>/ · V(s) := 0<br/>/ · V(a) := 0<br/>/ · V(r) := 0<br/>/ →() Select_T1_Value
    AwaitingConnection --> Connected: t04_ua_received_yes_no_yes<br/>on: UA_received<br/>[F_eq_1 and not layer_3_initiated and vs_eq_va]<br/>/ · Stop T1<br/>/ · Start T3<br/>/ · V(s) := 0<br/>/ · V(a) := 0<br/>/ · V(r) := 0<br/>/ →() Select_T1_Value
    AwaitingConnection --> Connected: t04_ua_received_yes_no_no<br/>on: UA_received<br/>[F_eq_1 and not layer_3_initiated and not vs_eq_va]<br/>/ · SRT := Initial Default<br/>/ · T1V := 2 * SRT<br/>/ · Start T1<br/>/ ↑ DL-CONNECT Confirm<br/>/ · Stop T1<br/>/ · Start T3<br/>/ · V(s) := 0<br/>/ · V(a) := 0<br/>/ · V(r) := 0<br/>/ →() Select_T1_Value
    AwaitingConnection --> Disconnected: t05_t1_expiry_yes<br/>on: T1_expiry<br/>[RC_eq_N2]<br/>/ · discard_frame_queue<br/>/ ↑ DL-ERROR Indication (G)<br/>/ ↑ DL-DISCONNECT Indication
    AwaitingConnection --> AwaitingConnection: t05_t1_expiry_no<br/>on: T1_expiry<br/>[not RC_eq_N2]<br/>/ · RC := RC + 1<br/>/ ↓ SABM (P == 1)<br/>/ →() Select_T1_Value<br/>/ · Start T1
    AwaitingConnection --> AwaitingConnection: t06_all_other_primitives__from_lower_layer<br/>on: all_other_primitives__from_lower_layer
    AwaitingConnection --> AwaitingConnection: t07_dl_connect_request<br/>on: DL_CONNECT_request<br/>/ · Discard Queue<br/>/ · Set Layer 3 Initiated
    AwaitingConnection --> AwaitingConnection: t08_dl_unit_data_request<br/>on: DL_UNIT_DATA_request<br/>/ ↓ UI Command
    AwaitingConnection --> AwaitingConnection: t09_dl_data_request_yes<br/>on: DL_DATA_request<br/>[layer_3_initiated]<br/>/ ⇢ Push Frame on Queue
    AwaitingConnection --> AwaitingConnection: t09_dl_data_request_no<br/>on: DL_DATA_request<br/>[not layer_3_initiated]
    AwaitingConnection --> AwaitingConnection: t10_i_frame_pops_off_queue_yes<br/>on: I_frame_pops_off_queue<br/>[layer_3_initiated]<br/>/ ⇢ Push Frame on Queue
    AwaitingConnection --> AwaitingConnection: t10_i_frame_pops_off_queue_no<br/>on: I_frame_pops_off_queue<br/>[not layer_3_initiated]
    AwaitingConnection --> AwaitingConnection: t11_all_other_primitives__from_upper_layer<br/>on: all_other_primitives__from_upper_layer
    AwaitingConnection --> AwaitingConnection: t12_ui_received_yes<br/>on: UI_received<br/>[P_eq_1]<br/>/ →() UI Check<br/>/ ↓ DM (F = 1)
    AwaitingConnection --> AwaitingConnection: t12_ui_received_no<br/>on: UI_received<br/>[not P_eq_1]<br/>/ →() UI Check
    AwaitingConnection --> AwaitingConnection: t13_control_field_error<br/>on: control_field_error<br/>/ ↑ DL-ERROR Indication (L)
    AwaitingConnection --> AwaitingConnection: t14_info_not_permitted_in_frame<br/>on: info_not_permitted_in_frame<br/>/ ↑ DL-ERROR Indication (M)
    AwaitingConnection --> AwaitingConnection: t15_u_or_s_frame_length_error<br/>on: u_or_s_frame_length_error<br/>/ ↑ DL-ERROR Indication (N)
    AwaitingConnection --> AwaitingConnection: t16_sabm_received<br/>on: SABM_received<br/>/ · F := P<br/>/ ↓ UA
    AwaitingConnection --> AwaitingV22Connection: t17_sabme_received<br/>on: SABME_received<br/>/ · F := P<br/>/ ↓ DM
